--- a/README.html
+++ b/README.html
@@ -1,1 +1,4 @@
 this theme from https://moodle.org/plugins/?q=type%3Atheme
+LMS LINK http://examplecapstone.freedynamicdns.org/ 
+username: ajell
+pas:PuFzy4vA4sQu
